@@ -9,6 +9,7 @@ Release 0.19.1 - Unreleased
                names (Jonathan Gray via Andrew Purtell)
    HBASE-1190  TableInputFormatBase with row filters scan too far (Dave
                Latham via Andrew Purtell)
+   HBASE-1198  OOME in IPC server does not trigger abort behavior
 
   IMPROVEMENTS
    HBASE-845   HCM.isTableEnabled doesn't really tell if it is, or not
